change line color

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <a href="http://">Contact</a>
             </nav>
         </div>
-        <h1>This is what I learned on day one of week two.<hr class="horzontial"> </h1>
+        <h1>This is what I learned on day one of week two.<hr color="#555"> </h1>
     </header>
     <main>
         
